# hub

./: .env.example  .gitignore  .taplo.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  hub.toml.example  justfile  prek.toml
.agents/skills/: github-ci-investigate.md
.agents/skills/repo-scan/: SKILL.md
.github/workflows/: ci.yml
clients/: Cargo.toml  README.md
clients/src/: github.rs  lib.rs  linear.rs
config/: Cargo.toml  README.md
config/schemas/: README.md  hub.toml.schema.json
config/schemas/workflows/: github-issues.schema.json  github-prs.schema.json  user-activity-gcp.schema.json
config/src/: lib.rs  toml.rs
config/src/snapshots/: config__toml__tests__snapshot_full_device_config.snap
docs/: README.md  conventions.md  private-integrations.md  vision.md
docs/architecture/: private-workflows.md  secrets.md
docs/conventions/: assertions.md  code-style.md  testing.md
docs/decisions/: 001-hub-as-single-command-center.md  002-public-repo-private-integrations.md  003-config-model.md  004-observation-persistence.md  005-agent-skills.md  006-hub-as-skill-library.md
docs/playbooks/: add-a-private-workflow.md  add-a-project.md  add-a-skill.md  add-a-workflow.md  set-up-private-workflows-repository.md
domain/: README.md
domain/src/: lib.rs
scripts/: README.md  setup-private.sh
store/: Cargo.toml  README.md
ui/: README.md
ui/cli/: Cargo.toml  README.md
ui/cli/src/: main.rs
ui/cli/src/commands/: status.rs
ui/tui/: Cargo.toml
workflows/: Cargo.toml  README.md
workflows/src/: lib.rs  status.rs
(+2 files in other folders)
