[package]
name = "clients"
version = "0.1.0"
edition = "2021"

[features]
private = []

[dependencies]
anyhow = "1"
chrono = "0.4"
domain = { path = "../domain" }
futures = "0.3"
humantime = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
