[package]
name = "hub-cli"
version = "0.1.0"
edition = "2021"

[features]
private = ["workflows/private"]

[[bin]]
name = "hub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
config = { path = "../../config" }
domain = { path = "../../domain" }
tokio = { version = "1", features = ["full"] }
workflows = { path = "../../workflows" }
